import * as grpc from '@grpc/grpc-js';
import { loadPackageDefinition } from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';

interface MetricRequest {
    eventType: string;
    data: string;
}

interface MetricResponse {
    status: string;
    message: string;
}

class APIClient {
    private static instance: APIClient;
    private client: any;
    private isConnected: boolean = false;
    private serverAddress: string;

    private constructor(serverAddress: string, protoPath: string, packageName: string, serviceName: string) {
        this.serverAddress = serverAddress;
        
        try {
            console.log(`üîå Initializing gRPC Client for ${serverAddress}`);
            
            const packageDefinition = protoLoader.loadSync(protoPath, {
                keepCase: true,
                longs: String,
                enums: String,
                defaults: true,
                oneofs: true,
            });
            
            console.log('‚úÖ Package Definition Loaded');
            
            const protoDescriptor = loadPackageDefinition(packageDefinition);
            console.log('‚úÖ Proto Descriptor Loaded');
            
            // Navigate to the service
            const packageObj = (protoDescriptor as any)[packageName];
            if (!packageObj) {
                throw new Error(`Package '${packageName}' Not Found`);
            }
            
            const service = packageObj[serviceName];
            if (!service) {
                throw new Error(`Service '${serviceName}' Not Found`);
            }
            
            console.log(`‚úÖ Service '${serviceName}' Found`);
            
            this.client = new service(serverAddress, grpc.credentials.createInsecure());
            console.log('‚úÖ gRPC Client Created');

            // Test the connection
            this.testConnection();
            
        } catch (error) {
            console.error('‚ùå Failed to Initialize gRPC Client:', error);
            throw error;
        }
    }

    private testConnection(): void {
        console.log('üîç Testing gRPC Connection...');
        
        this.client.waitForReady(Date.now() + 10000, (error: any) => {
            if (error) {
                console.error('‚ùå gRPC Connection Failed:', error);
                this.isConnected = false;
            } else {
                console.log('‚úÖ gRPC Connection Established Successfully');
                this.isConnected = true;
            }
        });
    }

    static getInstance(serverAddress: string, protoPath: string, packageName: string, serviceName: string): APIClient {
        if (!APIClient.instance) {
            APIClient.instance = new APIClient(serverAddress, protoPath, packageName, serviceName);
        }
        return APIClient.instance;
    }

    sendMessage(method: string, message: MetricRequest): Promise<MetricResponse> {
        return new Promise((resolve, reject) => {
            console.log(`üì§ Calling gRPC Method: ${method}`);
            console.log(`üì¶ Message:`, message);
            
            // Add timeout to the call
            const deadline = new Date();
            deadline.setSeconds(deadline.getSeconds() + 10);
            
            this.client[method](message, { deadline }, (error: any, response: MetricResponse) => {
                if (error) {
                    console.error('‚ùå gRPC Call Failed:', error);
                    console.error('‚ùå Error Code:', error.code);
                    console.error('‚ùå Error Details:', error.details);
                    reject(error);
                } else {
                    console.log('‚úÖ gRPC Call Successful:', response);
                    resolve(response);
                }
            });
        });
    }

    getConnectionStatus(): boolean {
        return this.isConnected;
    }
}

export default APIClient;